checkpoint: L10 PASSED (1077s)