@@ -2,47 +2,50 @@ package ming;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Function;
 
-/**
- * Scheme interpreter entry point.
- * Agents implement this class.
- */
 public class Evaluator {
     private final StringBuilder outputBuffer = new StringBuilder();
 
-    /**
-     * Evaluate one or more Scheme expressions and return the string
-     * representation of the last result.
-     */
     public String evalStr(String input) throws EvalError {
         var tokens = new Tokenizer(input).tokenize();
         var exprs = new Parser(tokens).parseAll();
         if (exprs.isEmpty()) throw new EvalError("No expressions");
         Environment env = createGlobalEnv();
-        SchemeValue result = null;
-        for (SchemeValue expr : exprs) {
-            result = eval(expr, env);
-        }
+        SchemeValue result = trampoline(evalProgram(exprs, 0, env));
         if (result instanceof SchemeValue.VoidVal) return "#<void>";
         return result.display();
     }
 
-    /**
-     * Evaluate Scheme expressions and return both the result string
-     * and any captured output from display/write/newline.
-     */
     public EvalResult evalStrWithOutput(String input) throws EvalError {
         outputBuffer.setLength(0);
         var tokens = new Tokenizer(input).tokenize();
         var exprs = new Parser(tokens).parseAll();
         if (exprs.isEmpty()) throw new EvalError("No expressions");
         Environment env = createGlobalEnv();
-        SchemeValue result = null;
-        for (SchemeValue expr : exprs) {
-            result = eval(expr, env);
-        }
+        SchemeValue result = trampoline(evalProgram(exprs, 0, env));
         String resultStr = (result instanceof SchemeValue.VoidVal) ? "#<void>" : result.display();
         return new EvalResult(resultStr, outputBuffer.toString());
+    }
+
+    private Bounce evalProgram(List<SchemeValue> exprs, int idx, Environment env) {
+        if (idx >= exprs.size()) return new Bounce.Done(new SchemeValue.VoidVal());
+        if (idx == exprs.size() - 1) {
+            return new Bounce.More(() -> eval(exprs.get(idx), env, v -> new Bounce.Done(v)));
+        }
+        return new Bounce.More(() -> eval(exprs.get(idx), env, ignored ->
+            evalProgram(exprs, idx + 1, env)
+        ));
+    }
+
+    private SchemeValue trampoline(Bounce bounce) throws EvalError {
+        while (true) {
+            switch (bounce) {
+                case Bounce.Done d -> { return d.value(); }
+                case Bounce.Err e -> { throw e.error(); }
+                case Bounce.More m -> { bounce = m.thunk().get(); }
+            }
+        }
     }
 
     private Environment createGlobalEnv() {
@@ -79,6 +82,25 @@ public class Evaluator {
                 result /= divisor;
             }
             return new SchemeValue.IntVal(result);
+        }));
+
+        env.define("modulo", new SchemeValue.BuiltinVal("modulo", args -> {
+            if (args.size() != 2) throw new EvalError("modulo requires 2 arguments");
+            long a = requireInt(args.get(0));
+            long b = requireInt(args.get(1));
+            if (b == 0) throw new EvalError("Division by zero");
+            return new SchemeValue.IntVal(Math.floorMod(a, b));
+        }));
+        env.define("remainder", new SchemeValue.BuiltinVal("remainder", args -> {
+            if (args.size() != 2) throw new EvalError("remainder requires 2 arguments");
+            long a = requireInt(args.get(0));
+            long b = requireInt(args.get(1));
+            if (b == 0) throw new EvalError("Division by zero");
+            return new SchemeValue.IntVal(a % b);
+        }));
+        env.define("abs", new SchemeValue.BuiltinVal("abs", args -> {
+            if (args.size() != 1) throw new EvalError("abs requires 1 argument");
+            return new SchemeValue.IntVal(Math.abs(requireInt(args.getFirst())));
         }));
 
         // Comparisons
@@ -134,7 +156,6 @@ public class Evaluator {
         env.define("append", new SchemeValue.BuiltinVal("append", args -> {
             if (args.isEmpty()) return SchemeValue.NIL;
             if (args.size() == 1) return args.getFirst();
-            // Append all lists
             SchemeValue result = args.getLast();
             for (int i = args.size() - 2; i >= 0; i--) {
                 result = appendTwo(args.get(i), result);
@@ -155,6 +176,11 @@ public class Evaluator {
             new SchemeValue.BoolVal(args.getFirst() instanceof SchemeValue.SymbolVal)));
         env.define("char?", new SchemeValue.BuiltinVal("char?", args ->
             new SchemeValue.BoolVal(args.getFirst() instanceof SchemeValue.CharVal)));
+        env.define("procedure?", new SchemeValue.BuiltinVal("procedure?", args ->
+            new SchemeValue.BoolVal(args.getFirst() instanceof SchemeValue.LambdaVal
+                || args.getFirst() instanceof SchemeValue.BuiltinVal
+                || args.getFirst() instanceof SchemeValue.CpsBuiltinVal
+                || args.getFirst() instanceof SchemeValue.ContinuationVal)));
 
         // I/O
         env.define("display", new SchemeValue.BuiltinVal("display", args -> {
@@ -206,9 +232,8 @@ public class Evaluator {
                 return new SchemeValue.BoolVal(false);
             }
         }));
-        env.define("number->string", new SchemeValue.BuiltinVal("number->string", args -> {
-            return new SchemeValue.StringVal(String.valueOf(requireInt(args.getFirst())));
-        }));
+        env.define("number->string", new SchemeValue.BuiltinVal("number->string", args ->
+            new SchemeValue.StringVal(String.valueOf(requireInt(args.getFirst())))));
         env.define("symbol->string", new SchemeValue.BuiltinVal("symbol->string", args -> {
             if (!(args.getFirst() instanceof SchemeValue.SymbolVal s)) throw new EvalError("symbol->string: not a symbol");
             return new SchemeValue.StringVal(s.name());
@@ -226,11 +251,21 @@ public class Evaluator {
             if (!(args.getFirst() instanceof SchemeValue.StringVal s)) throw new EvalError("string-copy: not a string");
             return new SchemeValue.StringVal(s.value());
         }));
-        // apply
-        env.define("apply", new SchemeValue.BuiltinVal("apply", args -> {
-            if (args.size() < 2) throw new EvalError("apply requires at least 2 arguments");
+
+        // string-set!
+        env.define("string-set!", new SchemeValue.BuiltinVal("string-set!", args -> {
+            if (args.size() != 3) throw new EvalError("string-set! requires 3 arguments");
+            if (!(args.get(0) instanceof SchemeValue.StringVal s)) throw new EvalError("string-set!: not a string");
+            int idx = (int) requireInt(args.get(1));
+            if (!(args.get(2) instanceof SchemeValue.CharVal c)) throw new EvalError("string-set!: not a character");
+            s.setCharAt(idx, c.value());
+            return new SchemeValue.VoidVal();
+        }));
+
+        // apply (CPS-aware: needs to forward continuation)
+        env.define("apply", new SchemeValue.CpsBuiltinVal("apply", (args, k) -> {
+            if (args.size() < 2) return new Bounce.Err(new EvalError("apply requires at least 2 arguments"));
             SchemeValue proc = args.getFirst();
-            // Collect prefix args + flatten last arg (must be a list)
             List<SchemeValue> callArgs = new ArrayList<>();
             for (int i = 1; i < args.size() - 1; i++) {
                 callArgs.add(args.get(i));
@@ -241,31 +276,372 @@ public class Evaluator {
                 last = p.cdr();
             }
             if (!(last instanceof SchemeValue.NilVal)) {
-                throw new EvalError("apply: last argument must be a proper list");
+                return new Bounce.Err(new EvalError("apply: last argument must be a proper list"));
             }
-            if (proc instanceof SchemeValue.BuiltinVal builtin) {
-                return builtin.func().apply(callArgs);
-            }
-            if (proc instanceof SchemeValue.LambdaVal lambda) {
-                Environment callEnv = applyLambdaEnv(lambda, callArgs, "apply");
-                SchemeValue result = null;
-                for (SchemeValue bodyExpr : lambda.body()) {
-                    result = eval(bodyExpr, callEnv);
-                }
-                return result;
-            }
-            throw new EvalError("apply: not a procedure");
+            return applyProc(proc, callArgs, "apply", k);
         }));
 
-        env.define("string-set!", new SchemeValue.BuiltinVal("string-set!", args -> {
-            if (args.size() != 3) throw new EvalError("string-set! requires 3 arguments");
-            if (!(args.get(0) instanceof SchemeValue.StringVal s)) throw new EvalError("string-set!: not a string");
-            int idx = (int) requireInt(args.get(1));
-            if (!(args.get(2) instanceof SchemeValue.CharVal c)) throw new EvalError("string-set!: not a character");
-            s.setCharAt(idx, c.value());
-            return new SchemeValue.VoidVal();
+        // call/cc and call-with-current-continuation
+        SchemeValue.CpsBuiltinFunc callccFunc = (args, k) -> {
+            if (args.size() != 1) return new Bounce.Err(new EvalError("call/cc requires 1 argument"));
+            SchemeValue f = args.getFirst();
+            SchemeValue cont = new SchemeValue.ContinuationVal(k);
+            return applyProc(f, List.of(cont), "call/cc", k);
+        };
+        env.define("call/cc", new SchemeValue.CpsBuiltinVal("call/cc", callccFunc));
+        env.define("call-with-current-continuation", new SchemeValue.CpsBuiltinVal("call-with-current-continuation", callccFunc));
+    }
+
+    // ── CPS eval ──────────────────────────────────────────────────────
+
+    private Bounce eval(SchemeValue expr, Environment env, SchemeValue.Cont k) {
+        return switch (expr) {
+            case SchemeValue.IntVal v -> k.apply(v);
+            case SchemeValue.BoolVal v -> k.apply(v);
+            case SchemeValue.StringVal v -> k.apply(v);
+            case SchemeValue.CharVal v -> k.apply(v);
+            case SchemeValue.VoidVal v -> k.apply(v);
+            case SchemeValue.NilVal v -> k.apply(v);
+            case SchemeValue.PairVal v -> k.apply(v);
+            case SchemeValue.LambdaVal v -> k.apply(v);
+            case SchemeValue.BuiltinVal v -> k.apply(v);
+            case SchemeValue.CpsBuiltinVal v -> k.apply(v);
+            case SchemeValue.ContinuationVal v -> k.apply(v);
+            case SchemeValue.SymbolVal v -> {
+                try {
+                    yield k.apply(env.get(v.name()));
+                } catch (EvalError e) {
+                    yield new Bounce.Err(new EvalError("Unbound variable: " + v.name() + " at " + v.line() + ":" + v.col()));
+                }
+            }
+            case SchemeValue.ListVal listVal -> evalList(listVal, env, k);
+        };
+    }
+
+    private Bounce evalList(SchemeValue.ListVal listVal, Environment env, SchemeValue.Cont k) {
+        List<SchemeValue> elems = listVal.elements();
+        String pos = listVal.line() + ":" + listVal.col();
+        if (elems.isEmpty()) return new Bounce.Err(new EvalError("Empty application at " + pos));
+        SchemeValue head = elems.getFirst();
+
+        // Check special forms
+        if (head instanceof SchemeValue.SymbolVal sym) {
+            Bounce special = evalSpecialForm(sym.name(), elems, env, pos, k);
+            if (special != null) return special;
+        }
+
+        // Procedure call: eval head, eval args (right-to-left for Guile compat), apply
+        return new Bounce.More(() -> eval(head, env, proc ->
+            evalArgsRTL(elems, elems.size() - 1, 1, List.of(), env, args ->
+                applyProc(proc, args, pos, k)
+            )
+        ));
+    }
+
+    private Bounce evalSpecialForm(String name, List<SchemeValue> elems, Environment env,
+                                    String pos, SchemeValue.Cont k) {
+        return switch (name) {
+            case "quote" -> {
+                if (elems.size() != 2)
+                    yield new Bounce.Err(new EvalError("quote requires exactly 1 argument at " + pos));
+                yield k.apply(quoteDatum(elems.get(1)));
+            }
+            case "set!" -> {
+                if (elems.size() != 3)
+                    yield new Bounce.Err(new EvalError("set! requires exactly 2 arguments at " + pos));
+                if (!(elems.get(1) instanceof SchemeValue.SymbolVal sym2))
+                    yield new Bounce.Err(new EvalError("set!: expected symbol"));
+                yield new Bounce.More(() -> eval(elems.get(2), env, val -> {
+                    try {
+                        env.set(sym2.name(), val);
+                        return k.apply(new SchemeValue.VoidVal());
+                    } catch (EvalError e) {
+                        return new Bounce.Err(e);
+                    }
+                }));
+            }
+            case "define" -> evalDefine(elems, env, pos, k);
+            case "lambda" -> {
+                try {
+                    yield k.apply(buildLambda(elems, env, pos));
+                } catch (EvalError e) {
+                    yield new Bounce.Err(e);
+                }
+            }
+            case "if" -> {
+                if (elems.size() < 3 || elems.size() > 4)
+                    yield new Bounce.Err(new EvalError("if requires 2 or 3 arguments at " + pos));
+                yield new Bounce.More(() -> eval(elems.get(1), env, condVal -> {
+                    if (condVal.isTruthy()) {
+                        return new Bounce.More(() -> eval(elems.get(2), env, k));
+                    } else if (elems.size() == 4) {
+                        return new Bounce.More(() -> eval(elems.get(3), env, k));
+                    }
+                    return k.apply(new SchemeValue.VoidVal());
+                }));
+            }
+            case "begin" -> evalSequence(elems, 1, env, k);
+            case "cond" -> evalCond(elems, 1, env, k);
+            case "and" -> {
+                if (elems.size() == 1) yield k.apply(new SchemeValue.BoolVal(true));
+                yield evalAnd(elems, 1, env, k);
+            }
+            case "or" -> {
+                if (elems.size() == 1) yield k.apply(new SchemeValue.BoolVal(false));
+                yield evalOr(elems, 1, env, k);
+            }
+            case "let" -> evalLet(elems, env, pos, k);
+            default -> null; // not a special form
+        };
+    }
+
+    // ── Sequence / body evaluation ────────────────────────────────────
+
+    private Bounce evalSequence(List<SchemeValue> exprs, int start, Environment env, SchemeValue.Cont k) {
+        if (start >= exprs.size()) return k.apply(new SchemeValue.VoidVal());
+        return evalSeqFrom(exprs, start, env, k);
+    }
+
+    private Bounce evalSeqFrom(List<SchemeValue> exprs, int idx, Environment env, SchemeValue.Cont k) {
+        if (idx == exprs.size() - 1) {
+            return new Bounce.More(() -> eval(exprs.get(idx), env, k));
+        }
+        return new Bounce.More(() -> eval(exprs.get(idx), env, ignored ->
+            evalSeqFrom(exprs, idx + 1, env, k)
+        ));
+    }
+
+    private Bounce evalBody(List<SchemeValue> body, Environment env, SchemeValue.Cont k) {
+        return evalSeqFrom(body, 0, env, k);
+    }
+
+    // ── Argument evaluation ───────────────────────────────────────────
+
+    /** Evaluate args right-to-left (Guile-compatible), returning them in left-to-right order. */
+    private Bounce evalArgsRTL(List<SchemeValue> elems, int idx, int start,
+                                List<SchemeValue> acc, Environment env,
+                                Function<List<SchemeValue>, Bounce> then) {
+        if (idx < start) return then.apply(acc);
+        return new Bounce.More(() -> eval(elems.get(idx), env, val -> {
+            // Prepend val to acc — builds left-to-right order as we iterate right-to-left
+            List<SchemeValue> newAcc = new ArrayList<>(acc.size() + 1);
+            newAcc.add(val);
+            newAcc.addAll(acc);
+            return evalArgsRTL(elems, idx - 1, start, newAcc, env, then);
         }));
     }
+
+    private Bounce evalInitExprs(List<SchemeValue> exprs, int idx, List<SchemeValue> acc,
+                                  Environment env, Function<List<SchemeValue>, Bounce> then) {
+        if (idx >= exprs.size()) return then.apply(acc);
+        return new Bounce.More(() -> eval(exprs.get(idx), env, val -> {
+            List<SchemeValue> newAcc = new ArrayList<>(acc);
+            newAcc.add(val);
+            return evalInitExprs(exprs, idx + 1, newAcc, env, then);
+        }));
+    }
+
+    // ── Procedure application ─────────────────────────────────────────
+
+    private Bounce applyProc(SchemeValue proc, List<SchemeValue> args, String pos, SchemeValue.Cont k) {
+        if (proc instanceof SchemeValue.BuiltinVal builtin) {
+            try {
+                SchemeValue result = builtin.func().apply(args);
+                return k.apply(result);
+            } catch (EvalError e) {
+                String msg = e.getMessage();
+                if (!msg.matches(".*\\d+:\\d+.*")) {
+                    return new Bounce.Err(new EvalError(msg + " at " + pos));
+                }
+                return new Bounce.Err(e);
+            }
+        }
+        if (proc instanceof SchemeValue.CpsBuiltinVal cps) {
+            return cps.func().apply(args, k);
+        }
+        if (proc instanceof SchemeValue.LambdaVal lambda) {
+            try {
+                Environment callEnv = applyLambdaEnv(lambda, args, pos);
+                return evalBody(lambda.body(), callEnv, k);
+            } catch (EvalError e) {
+                return new Bounce.Err(e);
+            }
+        }
+        if (proc instanceof SchemeValue.ContinuationVal contVal) {
+            if (args.size() != 1) {
+                return new Bounce.Err(new EvalError("continuation requires exactly 1 argument at " + pos));
+            }
+            // Invoke the captured continuation — caller's k is discarded
+            return contVal.k().apply(args.getFirst());
+        }
+        return new Bounce.Err(new EvalError("Not a procedure: " + proc.display() + " at " + pos));
+    }
+
+    // ── Special form helpers ──────────────────────────────────────────
+
+    private Bounce evalDefine(List<SchemeValue> elems, Environment env, String pos, SchemeValue.Cont k) {
+        if (elems.size() < 3)
+            return new Bounce.Err(new EvalError("define requires at least 2 arguments at " + pos));
+        SchemeValue target = elems.get(1);
+        if (target instanceof SchemeValue.SymbolVal sym) {
+            return new Bounce.More(() -> eval(elems.get(2), env, val -> {
+                env.define(sym.name(), val);
+                return k.apply(new SchemeValue.VoidVal());
+            }));
+        } else if (target instanceof SchemeValue.ListVal nameAndParams) {
+            try {
+                List<SchemeValue> parts = nameAndParams.elements();
+                if (parts.isEmpty()) throw new EvalError("define: empty name list");
+                if (!(parts.getFirst() instanceof SchemeValue.SymbolVal fnName))
+                    throw new EvalError("define: expected symbol as function name");
+                List<String> params = new ArrayList<>();
+                String restParam = null;
+                for (int i = 1; i < parts.size(); i++) {
+                    if (parts.get(i) instanceof SchemeValue.SymbolVal p && p.name().equals(".")) {
+                        if (i + 1 >= parts.size()) throw new EvalError("define: expected symbol after dot");
+                        if (!(parts.get(i + 1) instanceof SchemeValue.SymbolVal rest))
+                            throw new EvalError("define: expected symbol after dot");
+                        restParam = rest.name();
+                        break;
+                    }
+                    if (!(parts.get(i) instanceof SchemeValue.SymbolVal p))
+                        throw new EvalError("define: expected symbol as parameter");
+                    params.add(p.name());
+                }
+                List<SchemeValue> body = elems.subList(2, elems.size());
+                SchemeValue.LambdaVal lambda = new SchemeValue.LambdaVal(params, restParam, body, env);
+                env.define(fnName.name(), lambda);
+                return k.apply(new SchemeValue.VoidVal());
+            } catch (EvalError e) {
+                return new Bounce.Err(e);
+            }
+        }
+        return new Bounce.Err(new EvalError("define: invalid syntax"));
+    }
+
+    private Bounce evalCond(List<SchemeValue> elems, int idx, Environment env, SchemeValue.Cont k) {
+        if (idx >= elems.size()) return k.apply(new SchemeValue.VoidVal());
+        if (!(elems.get(idx) instanceof SchemeValue.ListVal clause))
+            return new Bounce.Err(new EvalError("cond: expected clause"));
+        List<SchemeValue> parts = clause.elements();
+        if (parts.isEmpty()) return new Bounce.Err(new EvalError("cond: empty clause"));
+        boolean isElse = parts.getFirst() instanceof SchemeValue.SymbolVal s && s.name().equals("else");
+        if (isElse) {
+            if (parts.size() > 1) return evalSeqFrom(parts, 1, env, k);
+            return k.apply(new SchemeValue.VoidVal());
+        }
+        return new Bounce.More(() -> eval(parts.getFirst(), env, testVal -> {
+            if (testVal.isTruthy()) {
+                if (parts.size() > 1) return evalSeqFrom(parts, 1, env, k);
+                return k.apply(testVal);
+            }
+            return new Bounce.More(() -> evalCond(elems, idx + 1, env, k));
+        }));
+    }
+
+    private Bounce evalAnd(List<SchemeValue> elems, int idx, Environment env, SchemeValue.Cont k) {
+        if (idx == elems.size() - 1) {
+            return new Bounce.More(() -> eval(elems.get(idx), env, k));
+        }
+        return new Bounce.More(() -> eval(elems.get(idx), env, val -> {
+            if (!val.isTruthy()) return k.apply(val);
+            return evalAnd(elems, idx + 1, env, k);
+        }));
+    }
+
+    private Bounce evalOr(List<SchemeValue> elems, int idx, Environment env, SchemeValue.Cont k) {
+        if (idx == elems.size() - 1) {
+            return new Bounce.More(() -> eval(elems.get(idx), env, k));
+        }
+        return new Bounce.More(() -> eval(elems.get(idx), env, val -> {
+            if (val.isTruthy()) return k.apply(val);
+            return evalOr(elems, idx + 1, env, k);
+        }));
+    }
+
+    private Bounce evalLet(List<SchemeValue> elems, Environment env, String pos, SchemeValue.Cont k) {
+        if (elems.size() < 3)
+            return new Bounce.Err(new EvalError("let requires bindings and body at " + pos));
+
+        // Named let: (let name ((var init) ...) body...)
+        if (elems.get(1) instanceof SchemeValue.SymbolVal nameSym) {
+            if (elems.size() < 4)
+                return new Bounce.Err(new EvalError("named let requires bindings and body"));
+            String loopName = nameSym.name();
+            if (!(elems.get(2) instanceof SchemeValue.ListVal bindingsList))
+                return new Bounce.Err(new EvalError("let: expected bindings list"));
+            List<String> params = new ArrayList<>();
+            List<SchemeValue> initExprs = new ArrayList<>();
+            for (SchemeValue b : bindingsList.elements()) {
+                if (!(b instanceof SchemeValue.ListVal binding) || binding.elements().size() != 2)
+                    return new Bounce.Err(new EvalError("let: invalid binding"));
+                if (!(binding.elements().get(0) instanceof SchemeValue.SymbolVal s))
+                    return new Bounce.Err(new EvalError("let: expected symbol in binding"));
+                params.add(s.name());
+                initExprs.add(binding.elements().get(1));
+            }
+            List<SchemeValue> body = elems.subList(3, elems.size());
+            return evalInitExprs(initExprs, 0, new ArrayList<>(), env, inits -> {
+                Environment letEnv = new Environment(env);
+                SchemeValue.LambdaVal lambda = new SchemeValue.LambdaVal(params, body, letEnv);
+                letEnv.define(loopName, lambda);
+                Environment callEnv = new Environment(lambda.env());
+                for (int i = 0; i < params.size(); i++) {
+                    callEnv.define(params.get(i), inits.get(i));
+                }
+                return evalBody(body, callEnv, k);
+            });
+        }
+
+        // Regular let
+        if (!(elems.get(1) instanceof SchemeValue.ListVal bindingsList))
+            return new Bounce.Err(new EvalError("let: expected bindings list"));
+        Environment letEnv = new Environment(env);
+        List<SchemeValue> body = elems.subList(2, elems.size());
+        return evalLetBindings(bindingsList.elements(), 0, env, letEnv, body, k);
+    }
+
+    private Bounce evalLetBindings(List<SchemeValue> bindings, int idx, Environment outerEnv,
+                                    Environment letEnv, List<SchemeValue> body, SchemeValue.Cont k) {
+        if (idx >= bindings.size()) return evalBody(body, letEnv, k);
+        SchemeValue b = bindings.get(idx);
+        if (!(b instanceof SchemeValue.ListVal binding) || binding.elements().size() != 2)
+            return new Bounce.Err(new EvalError("let: invalid binding"));
+        if (!(binding.elements().get(0) instanceof SchemeValue.SymbolVal s))
+            return new Bounce.Err(new EvalError("let: expected symbol in binding"));
+        return new Bounce.More(() -> eval(binding.elements().get(1), outerEnv, val -> {
+            letEnv.define(s.name(), val);
+            return evalLetBindings(bindings, idx + 1, outerEnv, letEnv, body, k);
+        }));
+    }
+
+    // ── Lambda construction (no CPS needed — doesn't eval anything) ──
+
+    private SchemeValue buildLambda(List<SchemeValue> elems, Environment env, String pos) throws EvalError {
+        if (elems.size() < 3) throw new EvalError("lambda requires parameters and body at " + pos);
+        SchemeValue paramSpec = elems.get(1);
+        if (!(paramSpec instanceof SchemeValue.ListVal paramList))
+            throw new EvalError("lambda: expected parameter list");
+        List<String> params = new ArrayList<>();
+        String restParam = null;
+        List<SchemeValue> pElems = paramList.elements();
+        for (int i = 0; i < pElems.size(); i++) {
+            if (pElems.get(i) instanceof SchemeValue.SymbolVal sym && sym.name().equals(".")) {
+                if (i + 1 >= pElems.size()) throw new EvalError("lambda: expected symbol after dot");
+                if (!(pElems.get(i + 1) instanceof SchemeValue.SymbolVal rest))
+                    throw new EvalError("lambda: expected symbol after dot");
+                restParam = rest.name();
+                break;
+            }
+            if (!(pElems.get(i) instanceof SchemeValue.SymbolVal sym))
+                throw new EvalError("lambda: expected symbol as parameter");
+            params.add(sym.name());
+        }
+        List<SchemeValue> body = elems.subList(2, elems.size());
+        return new SchemeValue.LambdaVal(params, restParam, body, env);
+    }
+
+    // ── Helpers ───────────────────────────────────────────────────────
 
     private SchemeValue appendTwo(SchemeValue a, SchemeValue b) throws EvalError {
         if (a instanceof SchemeValue.NilVal) return b;
@@ -275,248 +651,6 @@ public class Evaluator {
         throw new EvalError("append: not a proper list");
     }
 
-    private SchemeValue eval(SchemeValue expr, Environment env) throws EvalError {
-        while (true) {
-            switch (expr) {
-                case SchemeValue.IntVal v -> { return v; }
-                case SchemeValue.BoolVal v -> { return v; }
-                case SchemeValue.StringVal v -> { return v; }
-                case SchemeValue.CharVal v -> { return v; }
-                case SchemeValue.VoidVal v -> { return v; }
-                case SchemeValue.NilVal v -> { return v; }
-                case SchemeValue.PairVal v -> { return v; }
-                case SchemeValue.LambdaVal v -> { return v; }
-                case SchemeValue.BuiltinVal v -> { return v; }
-                case SchemeValue.SymbolVal v -> {
-                    try { return env.get(v.name()); }
-                    catch (EvalError e) { throw new EvalError("Unbound variable: " + v.name() + " at " + v.line() + ":" + v.col()); }
-                }
-                case SchemeValue.ListVal listVal -> {
-                    List<SchemeValue> elems = listVal.elements();
-                    String pos = listVal.line() + ":" + listVal.col();
-                    if (elems.isEmpty()) throw new EvalError("Empty application at " + pos);
-                    SchemeValue head = elems.getFirst();
-
-                    // Special forms
-                    if (head instanceof SchemeValue.SymbolVal sym) {
-                        switch (sym.name()) {
-                            case "quote": {
-                                if (elems.size() != 2) throw new EvalError("quote requires exactly 1 argument at " + pos);
-                                return quoteDatum(elems.get(1));
-                            }
-                            case "set!": {
-                                if (elems.size() != 3) throw new EvalError("set! requires exactly 2 arguments at " + pos);
-                                if (!(elems.get(1) instanceof SchemeValue.SymbolVal sym2)) {
-                                    throw new EvalError("set!: expected symbol");
-                                }
-                                SchemeValue val = eval(elems.get(2), env);
-                                env.set(sym2.name(), val);
-                                return new SchemeValue.VoidVal();
-                            }
-                            case "define": {
-                                return evalDefine(elems, env, pos);
-                            }
-                            case "lambda": {
-                                return evalLambda(elems, env, pos);
-                            }
-                            case "if": {
-                                if (elems.size() < 3 || elems.size() > 4) throw new EvalError("if requires 2 or 3 arguments at " + pos);
-                                SchemeValue cond = eval(elems.get(1), env);
-                                if (cond.isTruthy()) {
-                                    expr = elems.get(2); // TCO
-                                    continue;
-                                } else if (elems.size() == 4) {
-                                    expr = elems.get(3); // TCO
-                                    continue;
-                                }
-                                return new SchemeValue.VoidVal();
-                            }
-                            case "begin": {
-                                for (int i = 1; i < elems.size() - 1; i++) {
-                                    eval(elems.get(i), env);
-                                }
-                                if (elems.size() > 1) {
-                                    expr = elems.getLast(); // TCO
-                                    continue;
-                                }
-                                return new SchemeValue.VoidVal();
-                            }
-                            case "cond": {
-                                boolean matched = false;
-                                for (int i = 1; i < elems.size(); i++) {
-                                    if (!(elems.get(i) instanceof SchemeValue.ListVal clause)) {
-                                        throw new EvalError("cond: expected clause");
-                                    }
-                                    List<SchemeValue> parts = clause.elements();
-                                    if (parts.isEmpty()) throw new EvalError("cond: empty clause");
-                                    boolean isElse = parts.getFirst() instanceof SchemeValue.SymbolVal s && s.name().equals("else");
-                                    if (isElse || eval(parts.getFirst(), env).isTruthy()) {
-                                        for (int j = 1; j < parts.size() - 1; j++) {
-                                            eval(parts.get(j), env);
-                                        }
-                                        if (parts.size() > 1) {
-                                            expr = parts.getLast(); // TCO
-                                            matched = true;
-                                            break;
-                                        }
-                                        return isElse ? new SchemeValue.VoidVal() : eval(parts.getFirst(), env);
-                                    }
-                                }
-                                if (matched) continue;
-                                return new SchemeValue.VoidVal();
-                            }
-                            case "and": {
-                                if (elems.size() == 1) return new SchemeValue.BoolVal(true);
-                                for (int i = 1; i < elems.size() - 1; i++) {
-                                    SchemeValue result = eval(elems.get(i), env);
-                                    if (!result.isTruthy()) return result;
-                                }
-                                expr = elems.getLast(); // TCO
-                                continue;
-                            }
-                            case "or": {
-                                if (elems.size() == 1) return new SchemeValue.BoolVal(false);
-                                for (int i = 1; i < elems.size() - 1; i++) {
-                                    SchemeValue result = eval(elems.get(i), env);
-                                    if (result.isTruthy()) return result;
-                                }
-                                expr = elems.getLast(); // TCO
-                                continue;
-                            }
-                            case "let": {
-                                if (elems.size() < 3) throw new EvalError("let requires bindings and body at " + pos);
-                                // Named let: (let name ((var init) ...) body...)
-                                if (elems.get(1) instanceof SchemeValue.SymbolVal nameSym) {
-                                    if (elems.size() < 4) throw new EvalError("named let requires bindings and body");
-                                    String name = nameSym.name();
-                                    if (!(elems.get(2) instanceof SchemeValue.ListVal bindingsList)) {
-                                        throw new EvalError("let: expected bindings list");
-                                    }
-                                    List<String> params = new ArrayList<>();
-                                    List<SchemeValue> inits = new ArrayList<>();
-                                    for (SchemeValue b : bindingsList.elements()) {
-                                        if (!(b instanceof SchemeValue.ListVal binding) || binding.elements().size() != 2) {
-                                            throw new EvalError("let: invalid binding");
-                                        }
-                                        if (!(binding.elements().get(0) instanceof SchemeValue.SymbolVal s)) {
-                                            throw new EvalError("let: expected symbol in binding");
-                                        }
-                                        params.add(s.name());
-                                        inits.add(eval(binding.elements().get(1), env));
-                                    }
-                                    List<SchemeValue> body = elems.subList(3, elems.size());
-                                    Environment letEnv = new Environment(env);
-                                    SchemeValue.LambdaVal lambda = new SchemeValue.LambdaVal(params, body, letEnv);
-                                    letEnv.define(name, lambda);
-                                    // Apply with TCO: set up env and tail-call last body expr
-                                    Environment callEnv = new Environment(lambda.env());
-                                    for (int i = 0; i < params.size(); i++) {
-                                        callEnv.define(params.get(i), inits.get(i));
-                                    }
-                                    for (int i = 0; i < body.size() - 1; i++) {
-                                        eval(body.get(i), callEnv);
-                                    }
-                                    expr = body.getLast(); // TCO
-                                    env = callEnv;
-                                    continue;
-                                }
-                                // Regular let: (let ((var init) ...) body...)
-                                if (!(elems.get(1) instanceof SchemeValue.ListVal bindingsList)) {
-                                    throw new EvalError("let: expected bindings list");
-                                }
-                                Environment letEnv = new Environment(env);
-                                for (SchemeValue b : bindingsList.elements()) {
-                                    if (!(b instanceof SchemeValue.ListVal binding) || binding.elements().size() != 2) {
-                                        throw new EvalError("let: invalid binding");
-                                    }
-                                    if (!(binding.elements().get(0) instanceof SchemeValue.SymbolVal s)) {
-                                        throw new EvalError("let: expected symbol in binding");
-                                    }
-                                    SchemeValue val = eval(binding.elements().get(1), env);
-                                    letEnv.define(s.name(), val);
-                                }
-                                for (int i = 2; i < elems.size() - 1; i++) {
-                                    eval(elems.get(i), letEnv);
-                                }
-                                expr = elems.getLast(); // TCO
-                                env = letEnv;
-                                continue;
-                            }
-                            default: break;
-                        }
-                    }
-
-                    // Procedure call: evaluate all, then apply
-                    SchemeValue proc = eval(head, env);
-                    List<SchemeValue> args = new ArrayList<>();
-                    for (int i = 1; i < elems.size(); i++) {
-                        args.add(eval(elems.get(i), env));
-                    }
-                    // Inline apply with TCO for lambdas
-                    if (proc instanceof SchemeValue.BuiltinVal builtin) {
-                        try {
-                            return builtin.func().apply(args);
-                        } catch (EvalError e) {
-                            String msg = e.getMessage();
-                            if (!msg.matches(".*\\d+:\\d+.*")) {
-                                throw new EvalError(msg + " at " + pos);
-                            }
-                            throw e;
-                        }
-                    }
-                    if (proc instanceof SchemeValue.LambdaVal lambda) {
-                        Environment callEnv = applyLambdaEnv(lambda, args, pos);
-                        for (int i = 0; i < lambda.body().size() - 1; i++) {
-                            eval(lambda.body().get(i), callEnv);
-                        }
-                        expr = lambda.body().getLast(); // TCO
-                        env = callEnv;
-                        continue;
-                    }
-                    throw new EvalError("Not a procedure: " + proc.display() + " at " + pos);
-                }
-            }
-        }
-    }
-
-    private SchemeValue evalDefine(List<SchemeValue> elems, Environment env, String pos) throws EvalError {
-        if (elems.size() < 3) throw new EvalError("define requires at least 2 arguments at " + pos);
-        SchemeValue target = elems.get(1);
-        if (target instanceof SchemeValue.SymbolVal sym) {
-            SchemeValue val = eval(elems.get(2), env);
-            env.define(sym.name(), val);
-            return new SchemeValue.VoidVal();
-        } else if (target instanceof SchemeValue.ListVal nameAndParams) {
-            List<SchemeValue> parts = nameAndParams.elements();
-            if (parts.isEmpty()) throw new EvalError("define: empty name list");
-            if (!(parts.getFirst() instanceof SchemeValue.SymbolVal fnName)) {
-                throw new EvalError("define: expected symbol as function name");
-            }
-            List<String> params = new ArrayList<>();
-            String restParam = null;
-            for (int i = 1; i < parts.size(); i++) {
-                if (parts.get(i) instanceof SchemeValue.SymbolVal p && p.name().equals(".")) {
-                    if (i + 1 >= parts.size()) throw new EvalError("define: expected symbol after dot");
-                    if (!(parts.get(i + 1) instanceof SchemeValue.SymbolVal rest)) {
-                        throw new EvalError("define: expected symbol after dot");
-                    }
-                    restParam = rest.name();
-                    break;
-                }
-                if (!(parts.get(i) instanceof SchemeValue.SymbolVal p)) {
-                    throw new EvalError("define: expected symbol as parameter");
-                }
-                params.add(p.name());
-            }
-            List<SchemeValue> body = elems.subList(2, elems.size());
-            SchemeValue.LambdaVal lambda = new SchemeValue.LambdaVal(params, restParam, body, env);
-            env.define(fnName.name(), lambda);
-            return new SchemeValue.VoidVal();
-        }
-        throw new EvalError("define: invalid syntax");
-    }
-
-    /** Convert parsed syntax (ListVal) into runtime data (PairVal/NilVal). */
     private SchemeValue quoteDatum(SchemeValue v) {
         if (v instanceof SchemeValue.ListVal list) {
             if (list.elements().isEmpty()) return SchemeValue.NIL;
@@ -529,43 +663,14 @@ public class Evaluator {
         return v;
     }
 
-    private SchemeValue evalLambda(List<SchemeValue> elems, Environment env, String pos) throws EvalError {
-        if (elems.size() < 3) throw new EvalError("lambda requires parameters and body at " + pos);
-        SchemeValue paramSpec = elems.get(1);
-        if (!(paramSpec instanceof SchemeValue.ListVal paramList)) {
-            throw new EvalError("lambda: expected parameter list");
-        }
-        List<String> params = new ArrayList<>();
-        String restParam = null;
-        List<SchemeValue> pElems = paramList.elements();
-        for (int i = 0; i < pElems.size(); i++) {
-            if (pElems.get(i) instanceof SchemeValue.SymbolVal sym && sym.name().equals(".")) {
-                if (i + 1 >= pElems.size()) throw new EvalError("lambda: expected symbol after dot");
-                if (!(pElems.get(i + 1) instanceof SchemeValue.SymbolVal rest)) {
-                    throw new EvalError("lambda: expected symbol after dot");
-                }
-                restParam = rest.name();
-                break;
-            }
-            if (!(pElems.get(i) instanceof SchemeValue.SymbolVal sym)) {
-                throw new EvalError("lambda: expected symbol as parameter");
-            }
-            params.add(sym.name());
-        }
-        List<SchemeValue> body = elems.subList(2, elems.size());
-        return new SchemeValue.LambdaVal(params, restParam, body, env);
-    }
-
     private Environment applyLambdaEnv(SchemeValue.LambdaVal lambda, List<SchemeValue> args, String pos) throws EvalError {
         int required = lambda.params().size();
         if (lambda.restParam() != null) {
-            if (args.size() < required) {
+            if (args.size() < required)
                 throw new EvalError("Expected at least " + required + " arguments, got " + args.size() + " at " + pos);
-            }
         } else {
-            if (args.size() != required) {
+            if (args.size() != required)
                 throw new EvalError("Expected " + required + " arguments, got " + args.size() + " at " + pos);
-            }
         }
         Environment callEnv = new Environment(lambda.env());
         for (int i = 0; i < required; i++) {
@@ -584,11 +689,5 @@ public class Evaluator {
     private long requireInt(SchemeValue val) throws EvalError {
         if (val instanceof SchemeValue.IntVal iv) return iv.value();
         throw new EvalError("Expected integer, got: " + val.display());
-    }
-
-    private static String posOf(SchemeValue v) {
-        if (v instanceof SchemeValue.ListVal l) return l.line() + ":" + l.col();
-        if (v instanceof SchemeValue.SymbolVal s) return s.line() + ":" + s.col();
-        return "0:0";
     }
 }
